# codeplz

./: .gitignore  Cargo.toml  LICENSE
src/: default_system_prompt.txt  main.rs
templates/: index.html
