[package]
name = "codeplz"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-bedrock = "1.45.0"
reqwest = { version = "0.12", features = ["json"] }
globset = "0.4.14"
walkdir = "2.5.0"
tiktoken-rs = "0.5.7"