[package]
name = "codeplz"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A tool for generating and applying code changes using AI"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.46.0"
aws-sdk-sts = "1.39.0 "  
reqwest = { version = "0.12", features = ["json"] }
globset = "0.4.14"
walkdir = "2.5.0"
tiktoken-rs = "0.5.7"
axum = "0.7.5"
askama = "0.12.1"
askama_axum = "0.4.0"
similar = "2.2.1"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.10.0"